unpackaged/main/default/objects/Account/fields/another_example__c.field-meta.xml
<CustomField>
    <fullName>another_example__c</fullName>
    <displayFormat>Z-{0000}-A</displayFormat>
    <label>another_example</label>
    <type>AutoNumber</type>
</CustomField>