unpackaged/main/default/objects/Account/fields/autofield_1__c.field-meta.xml
<SfCustomField x-gs-devobject="true">
	<fullName>autofield_1__c</fullName>
	<label>dHswhlWq</label>
	<type>AutoNumber</type>
</SfCustomField>