unpackaged/main/default/objects/Account/fields/dawdawda__c.field-meta.xml
<CustomField>
    <fullName>dawdawda__c</fullName>
    <label>dawdawda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>