unpackaged/main/default/objects/Account/fields/ewffsdfsdefesefsef__c.field-meta.xml
<CustomField>
    <fullName>ewffsdfsdefesefsef__c</fullName>
    <label>ewffsdfsdefesefsef</label>
    <type>AutoNumber</type>
</CustomField>