unpackaged/main/default/objects/Account/fields/ffffield_3__c.field-meta.xml
<CustomField>
    <fullName>ffffield_3__c</fullName>
    <label>ffffield-3</label>
    <type>AutoNumber</type>
</CustomField>