unpackaged/main/default/objects/Account/fields/field_10__c.field-meta.xml
<CustomField>
    <fullName>field_10__c</fullName>
    <label>brphpEBj</label>
    <type>AutoNumber</type>
</CustomField>