unpackaged/main/default/objects/Account/fields/field_11__c.field-meta.xml
<CustomField>
    <fullName>field_11__c</fullName>
    <label>field-11</label>
    <type>AutoNumber</type>
</CustomField>