unpackaged/main/default/objects/Account/fields/field_12__c.field-meta.xml
<CustomField>
    <fullName>field_12__c</fullName>
    <label>field-12 even more!</label>
    <type>AutoNumber</type>
</CustomField>