unpackaged/main/default/objects/Account/fields/more_fields_1__c.field-meta.xml
<CustomField>
    <fullName>more_fields_1__c</fullName>
    <label>more-fields-1</label>
    <type>AutoNumber</type>
</CustomField>