unpackaged/main/default/objects/Account/fields/pipe1__c.field-meta.xml
<CustomField>
    <fullName>pipe1__c</fullName>
    <displayFormat>PIPE-{0000}</displayFormat>
    <label>pipe1</label>
    <type>AutoNumber</type>
</CustomField>