unpackaged/main/default/objects/Account/fields/pipe2__c.field-meta.xml
<CustomField>
    <fullName>pipe2__c</fullName>
    <displayFormat>pipe2-{0000}</displayFormat>
    <label>pipe2</label>
    <type>AutoNumber</type>
</CustomField>